quickstart/policy/e2e.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentic-net-gateway
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
    - protocol: HTTP
      port: 10001
      name: agentic-net-gateway-listener1
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-local-mcp
spec:
  parentRefs:
    - name: agentic-net-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /local/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: local-mcp-backend # local mcp backend running in the Kubernetes cluster
          group: agentic.networking.x-k8s.io
          kind: Backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-remote-mcp
spec:
  parentRefs:
    - name: agentic-net-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /remote/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: remote-mcp-backend # remote mcp server
          group: agentic.networking.x-k8s.io
          kind: Backend
